force-app/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <inlineHelpText>Who is this book by?</inlineHelpText>
    <label>Author</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>