force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>The International Standard Book Number for the book.</description>
    <inlineHelpText>What is the book&apos;s ISBN number?</inlineHelpText>
    <label>ISBN</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>