force-app/main/default/objects/Book__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <inlineHelpText>When was this book published?</inlineHelpText>
    <label>Published</label>
    <type>Date</type>
</CustomField>